Adicionei um paragrafo

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At deleniti aliquid dolorem, optio quos excepturi incidunt nostrum, aperiam consectetur, consequuntur perspiciatis tempora culpa deserunt eum repellat a vitae maiores iusto?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis consequuntur a repudiandae minima sed debitis cupiditate adipisci iste. Incidunt illo commodi aliquid aliquam perferendis, harum voluptatibus reprehenderit sint minus id!</p>
 </body>
 </html>
